--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 <body> 
 
     <!-- eunjeong header -->
-    <header id="hd" class="d-flex">
+    <header id="hd" class="d-flex white">
         <div class="container_full d-flex jcb aic">
             <h1 class="order-1"><a href=""><img src="./img/logo/logo.svg" alt=""></a></h1>
 
-            <button class="Category-btn d-lg-none">
+            <button class="Category-btn d-lg-none white">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 20 20" fill="none">
                     <line x1="3" y1="5.4" x2="17" y2="5.4" stroke="#3F422F" stroke-width="1.2"/>
                     <line x1="3" y1="10.0667" x2="17" y2="10.0667" stroke="#3F422F" stroke-width="1.2"/>
@@ -78,14 +78,14 @@
                 </svg>
             </button> 
 
-            <ul id="gnb" class="d-none d-lg-flex order-0 gap-3"> 
+            <ul id="gnb" class="d-none d-lg-flex order-0 gap-3 organic"> 
                 <li><a href="" class="text-nowrap">예약하기</a></li>
                 <li><a href="" class="text-nowrap">오직여기</a></li>
                 <li><a href="" class="text-nowrap">프로모션</a></li>
                 <li><a href="" class="text-nowrap">브랜드</a></li>
             </ul>
 
-            <ul class="util d-flex order-2 text-nowrap aic gap-lg-5 gap-2">
+            <ul class="util d-flex order-2 text-nowrap aic gap-lg-5 gap-2 point_txt organic">
                 <li>
                     <a href="" class="text-nowrap">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -117,8 +117,9 @@
     <!-- eunjeong video -->
     <div class="video-container">
         <div class="video-bg"> 
-            <video autoplay muted loop data-src-desktop="./video/main_video.mp4" data-src-mobile="./video/mob_video.mp4">
+            <video autoplay muted loop>
                 <source src="./video/main_video.mp4" type="video/mp4">
+                <!-- Your browser does not support the video tag. -->
             </video>
         </div>
         <div class="video-icon aic">
@@ -137,14 +138,14 @@
     <!--// eunjeong video -->
 
     <!-- eunjeong search -->
-    <div class="search-box d-flex aic jcb">
+    <div class="search-box d-flex aic jcb d-none d-lg-flex ">
         <svg xmlns="http://www.w3.org/2000/svg" width="1435" height="80" viewBox="0 0 1435 80" fill="none">
             <path d="M0 0H1435L1398.51 60.6284C1391.27 72.6491 1378.27 80 1364.24 80H70.7646C56.7343 80 43.7296 72.6491 36.494 60.6284L0 0Z" fill="white"/>
         </svg>
     </div>
-    <div class="search-container d-none d-lg-flex aic"> 
-        <div class="topwhere">어디갈까요? 
-            <button class="d-flex aic">
+    <div class="search-container d-none d-lg-flex aic basic_txt white"> 
+        <div class="topwhere basic_txt organic">어디갈까요? 
+            <button class="d-flex aic point_txt">
              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
                 <path d="M19.4253 8.4061C19.4253 4.45249 16.0986 1.29641 12.1646 1.73486C9.18381 2.0637 6.77338 4.50541 6.40538 7.55943C6.19194 9.32835 6.65562 10.9763 7.55723 12.2803L11.9622 19.3447C12.4186 19.9985 13.3643 19.9985 13.8206 19.3447L18.2256 12.2803C18.9801 11.1842 19.429 9.84995 19.429 8.4061H19.4253Z" stroke="#3F422F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M12.8889 11.1279C14.5087 11.1279 15.8218 9.77921 15.8218 8.11548C15.8218 6.45175 14.5087 5.10303 12.8889 5.10303C11.269 5.10303 9.95587 6.45175 9.95587 8.11548C9.95587 9.77921 11.269 11.1279 12.8889 11.1279Z" stroke="#3F422F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -153,8 +154,8 @@
             지역을 선택하세요.
             </button>
         </div> 
-        <div class="topwhen">언제갈까요?
-            <button class="d-flex aic">
+        <div class="topwhen basic_txt organic">언제갈까요?
+            <button class="d-flex aic point_txt">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <path d="M23 3.86963H1V23.0001H23V3.86963Z" stroke="#3F422F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M1 9.60864H23" stroke="#3F422F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -170,13 +171,15 @@
                 <path d="M1 21L21 1M1 1L21 21" stroke="#3F422F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
         </div>
-        <button class="search-btn d-flex jic aic">검색</button>
+        <button class="search-btn d-flex jic aic basic_txt white">
+            <span>검색</span>
+        </button>
     </div>
     <!--// eunjeong search -->
 
     <!-- eunjeong quick -->
-    <div class="quick-menu">
-        <button class="quick-btn btn-reserve">
+    <div class="quick-menu d-none d-lg-flex point_txt">
+        <button class="quick-btn btn-reserve organic">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                 <path d="M16.9529 4.69562H4V16H16.9529V4.69562Z" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M4 8.08698H16.9529" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -184,9 +187,9 @@
                 <path d="M13.4199 3V5.82609" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M13.2458 10.5493L10.3019 13.3754L8.47086 11.806" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            예약확인
+            <span>예약확인</span>
         </button>
-        <button class="quick-btn btn-chat">
+        <button class="quick-btn btn-chat organic">
             <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
                 <path d="M17.6025 16.8001C14.6904 16.8001 12.2705 14.9007 11.5459 12.3334H8.45605C4.9834 12.3334 2.16699 15.0317 2.16699 18.3588V18.9614C2.16699 22.2885 4.9834 24.9868 8.45605 24.9868L6.8291 29.8334L14.54 24.9868H16.8779C20.3506 24.9868 23.167 22.2885 23.167 18.9614V18.8304L19.9268 16.787H17.6025V16.8001Z" stroke="#3F422F" stroke-width="1.56" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M16.1072 17.312L12.2241 21.0291C12.0965 21.1512 11.8698 21.1512 11.7422 21.0291L9.9707 19.3333" stroke="#3F422F" stroke-width="1.56" stroke-miterlimit="10" stroke-linecap="round"/>
@@ -194,23 +197,23 @@
                 <path d="M20.0898 8.99613C20.0898 7.95156 20.9685 7.11047 22.0598 7.11047C23.151 7.11047 24.0297 7.95156 24.0297 8.99613C24.0297 10.0407 23.151 10.8818 22.0598 10.8818V12.0213" stroke="#3F422F" stroke-width="1.56" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M22.127 15.345C22.6102 15.345 23.002 14.9532 23.002 14.47C23.002 13.9867 22.6102 13.595 22.127 13.595C21.6437 13.595 21.252 13.9867 21.252 14.47C21.252 14.9532 21.6437 15.345 22.127 15.345Z" fill="#3F422F"/>
             </svg>
-            고객센터
+            <span>고객센터</span>
         </button>
-        <button class="quick-btn btn-log">
+        <button class="quick-btn btn-log organic">
             <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
                 <path d="M12.8739 22.4333V28.6102" stroke="#3F422F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M23.4783 16.3592C23.113 16.2306 22.7217 16.1534 22.3174 16.1534H12.3783C10.513 16.1534 9 17.6461 9 19.4863V28.7131H25.6957V19.4863C25.6957 18.0579 24.7696 16.8354 23.4783 16.3592Z" stroke="#3F422F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M21.9261 22.4333V28.6102" stroke="#3F422F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M21.2608 9.86059C21.2608 11.9968 19.513 13.7212 17.3478 13.7212C15.1956 13.7212 13.4348 11.9968 13.4348 9.86059C13.4348 7.7244 15.1826 6 17.3478 6C19.5 6 21.2608 7.7244 21.2608 9.86059Z" stroke="#3F422F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            로그인
+            <span>로그인</span>
         </button>
-        <button class="quick-btn btn-top">
+        <button class="quick-btn btn-top organic_bg white">
             <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
                 <path d="M7 22L17.0186 12" stroke="#fff" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
                 <path d="M17.0186 12L27.0001 22" stroke="#fff" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
             </svg>
-            TOP
+            <span>TOP</span>
         </button>
     </div>
     <!--// eunjeong quick -->    
