--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container_full d-flex jcb aic">
             <h1 class="order-1"><a href=""><img src="./img/logo/logo.svg" alt=""></a></h1>
 
-            <button class="Category-btn d-lg-none white">
+            <button class="Category-btn d-lg-none white bg-white">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 20 20" fill="none">
                     <line x1="3" y1="5.4" x2="17" y2="5.4" stroke="#3F422F" stroke-width="1.2"/>
                     <line x1="3" y1="10.0667" x2="17" y2="10.0667" stroke="#3F422F" stroke-width="1.2"/>
@@ -175,6 +175,10 @@
             <span>검색</span>
         </button>
     </div>
+
+     
+
+
     <!--// eunjeong search -->
 
     <!-- eunjeong quick -->
