--- a/index.html
+++ b/index.html
@@ -447,7 +447,8 @@
     <!-- yena hotspot -->
     <div class="hotspot p100">
         <div class="container ">
-            <div class="main_tit">인기스팟</div>
+            <div class="point_txt organic d-lg-none">BEST SPOT</div>
+            <div class="main_tit">요즘 주목받는<br class="d-lg-none"> 베스트스팟</div>
             <section class="swiper conSwiper1">
                 <div class="hotplace_card_box swiper-wrapper d-flex">
                     <div class="swiper-slide">
@@ -606,7 +607,8 @@
     <!-- yena youtube -->
     <div class="youtube p100">
         <div class="container">
-            <div class="main_tit">소슬 SNS</div>
+            <div class="point_txt organic d-lg-none">YOUTUBE</div>
+            <div class="main_tit">캠핑 라이프를<br class="d-lg-none"> 구독해보세요</div>
             <section class="swiper youtuber">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -661,6 +663,7 @@
     <!-- yena more -->
     <div class="more p100">
         <div class="container">
+            <div class="point_txt organic d-lg-none">SEARCH</div>
             <div class="main_tit">가고 싶은 캠핑장소를<br class="d-lg-none"> 찾아보세요!</div>
             <div class="more_area d-lg-flex">
                 <div class="more_box d-flex flex-lg-nowrap flex-wrap align-items-center justify-content-between when ivory_bg">
