--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sosul소슬</title>
     <!-- seo -->
+    <!-- seo -->
     <meta name="description" content="" /> 
     <meta property="og:locale" content="ko_KR" /> 
     <meta property="og:site_name" content="" /> 
-    <meta property="og:url" content=""/> 
+    <meta property="og:url" content="https://item-team-sosul.vercel.app/"/> 
     <meta property="og:type" content="website" /> 
-    <meta property="og:title" content="" /> 
-    <meta property="og:description" content="" /> 
-    <meta property="og:image" content="" />
+    <meta property="og:title" content="Sosul소슬" /> 
+    <meta property="og:description" content="캠핑, 차박, 글램핑 등 자연 속에서 진정한 휴식을 원하는 고객을 위한 캠핑 예약 플랫폼" /> 
+    <meta property="og:image" content="./img/image/sosul_kakao.jpg" />
 
     <!-- 파비콘 바로가기 -->
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicon/apple-icon-57x57.png">
